k8s/test/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hermes-test
  labels:
    environment: test
    project: hermes
